--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/server"
+    "dev": "nodemon src/server",
+    "start": "pm2 start src/server.js --name 'servicecontrol'",
+    "delete": "pm2 delete 'servicecontrol'"
   },
   "keywords": [],
   "author": "",
